fixed overflow

--- a/style.css
+++ b/style.css
@@ -385,6 +385,7 @@ header.hide {
     box-shadow: 0 0 20px 5px rgba(59, 62, 69, 0.6);
     transition: all .3s ease-in-out;
     text-align: center;
+    border: 1px solid rgb(96, 94, 94);
 }
 
 .project-card:hover {
@@ -395,12 +396,13 @@ header.hide {
 
 .project-card h3 {
     margin-bottom: 20px;
+    display: inline-block;
 }
 
 .project-card h3::after {
     content: "";
     display: block;
-    width: 40%;
+    width: 100%;
     height: 2px;
     margin: 0 auto;
     margin-top: 5px;
@@ -417,19 +419,30 @@ header.hide {
 .skill-container {
     width: 70%;
     max-width: 1500px;
-    max-height: 400px;
-    overflow: auto;
-    scrollbar-width: none;
+    height: 400px;
     margin: auto;
     margin-bottom: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgba(91, 90, 90, 0.696);
+    border-radius: 20px;
+    box-shadow: 0 0 2px rgb(83, 83, 83);
+}
+
+.skill-wrapper {
+    width: calc(100% - 40px);
+    max-height: calc(100% - 40px);
+    overflow: scroll;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+    scrollbar-width: none;
+    border-radius: 5px;
 }
 
-
 .skill-card {
-    background-color: rgb(30, 29, 29);
+    background-color: rgba(30, 29, 29, 0.762);
     padding: 10px;
     border-radius: 5px;
 }
@@ -511,8 +524,8 @@ footer .container {
     margin: 10px;
     background-color: white;
     color: #000;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     transition: all .3s ease;
     cursor: pointer;
@@ -562,20 +575,25 @@ hr {
 /* Mobile View */
 @media (max-width: 767px) {
     body {
-        font-size: 14px;
+        font-size: 16px;
         padding: 0;
     }
 
     header {
         left: 0;
-        transform: none; /* 🔥 remove centering */
+        transform: none;
         width: 100%;
         padding: 0;
         top: 0;
+        background-color: #000000b9;
     }
 
     #navigation {
         display: none;
+    }
+
+    #navigation li a {
+        font-size: 2.4em;
     }
 
     #mobile-nav {
@@ -592,6 +610,12 @@ hr {
 
     #navigation li a {
         padding: 30px 10px;
+    }
+
+    /* section */
+
+    section:not(:first-child) {
+        padding: 2em 0;
     }
 
     /* home > main-view */
@@ -646,8 +670,11 @@ hr {
         padding: 20px;
         letter-spacing: 0;
         line-height: 1.3em;
-        text-align: center;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        hyphens: auto;
         margin-bottom: 50px;
+        font-size: 1.1em;
     }
 
     .card h3::after {
@@ -676,9 +703,9 @@ hr {
 
     /* skills */
 
-    .skill-container {
+    
+    .skill-wrapper {
         grid-template-columns: 1fr;
-        width: 90%;
     }
     
     /* footer */
@@ -695,6 +722,7 @@ hr {
     #developer {
         grid-column: 1/3;
         order: 1;
+        margin: auto;
     }
 
     #update-info {
@@ -702,13 +730,10 @@ hr {
     }
 
     .social-media {
-        padding: 0 10px;
+        padding: 0 15px;
+        transform: scale(.7);
     }
 
-    .social-media span {
-        height: 18px;
-        width: 18px;
-    }
 
     .social-media span:hover {
         transform: translateY(-3px);
